2007-09-14  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c: the menu appears when the right button is released
  - this fixes the problem of the taskbar menu opening on top of WASAP's menu


2007-08-19  Piotr Fusik  <fox@scene.pl>
* java/Makefile: added "-source 1.2" option for new Java compilers

* win32/wasap/wasap.c, win32/gui.c, win32/gui.h: made Tab and Alt+letter work
  in the file information window of WASAP

* win32/wasap/wasap.c: playback did not stop when the file browser was open


2007-07-05  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: channel mute works for hi-pass filters

* asap.c: IRQST=0xff for the extra POKEY; skip trailing "end-of-song" marks
  in detection of subsongs in CMC

* asap_internal.h: header comment

* asapscan.c: "-s SONG" option

* win32/gui.rc: only digits can be entered in text boxes


2007-06-13  Piotr Fusik  <fox@scene.pl>
* asapscan.c, acpu.c, asap_internal.h, win32/Makefile: "asapscan -c" outputs
  6502 trace

* asap.c: return 0xff for SKSTAT

* asap_internal.h: DEC $D40A suspends the 6502 once, not twice


2007-06-11  Piotr Fusik  <fox@scene.pl>
* chksap.pl: bundling single-character options ("-ftp" means "-f -t -p")

* win32/foobar2000/foo_asap.cpp: un-mute when resetting options


** 1.0.1 released on 2007-06-10

2007-06-10  Piotr Fusik  <fox@scene.pl>
* asapscan.c: fixed silence detection

* chksap.pl: "-p" prints names of processed files

* Makefile.in, java/Makefile, win32/Makefile: updated "clean" targets


2007-06-08  Piotr Fusik  <fox@scene.pl>
* moc/libasap_decoder.c, INSTALL: MOC 2.4.1 compatibility

* win32/foobar2000/foo_asap.cpp: editing author, name and date in SAP files

* xmms/libasap.c: fixed asap_get_time() - XMMS plugin didn't work on some
  systems


2007-06-07  Piotr Fusik  <fox@scene.pl>
* moc/libasap_decoder.c, configure.ac, Makefile.in, INSTALL, win32/Makefile:
  MOC plugin

* win32/gui.rc, win32/gui.c, win32/gui.h, win32/winamp/in_asap.c